# opengate-probe

backend/: probe_api.service  pyproject.toml
backend/probe_api/: influx.py  main.py  model.py
probe/: main.py  speedtest.py
speedtest-ping_scripts/: main.py
tests/: install.sh  main.py  requirements.txt
ui/: README.md  build.ps1  build.sh  pubspec.yaml
ui/lib/: black.dart  home.dart  info_provider.dart  interface_information_page.dart  main.dart  password.dart  speedtest.dart
ui/linux/: CMakeLists.txt  my_application.cc
ui/test/: widget_test.dart
ui/web/: index.html  manifest.json
ui/windows/runner/: main.cpp
